<resources>
    <string name="app_name">GOL</string>
    <string name="action_settings">Settings</string>
    <string name="profile_fragment_label">Profile Fragment</string>
    <string name="user_fragment_label">User Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="ProfileTitle">Profile</string>
    <string name="userProfileTitle">User Profile</string>
    <string name="arrow" translatable="false"> > </string>
    <string name="ElectricityAccountProfileTitle">Electricity Account Profile</string>
    <string name="AppSetting">App Setting</string>
    <string name="LogOutButton">Log Out</string>
    <string name="changePassword">Change Password</string>
    <string name="UserName">User Name</string>
    <string name="updateClickableText">Update</string>
    <string name="UserIC">Identity Card</string>
    <string name="UserEmail">Email Address</string>
    <string name="UserMobile">Mobile Number</string>
    <string name="cancel">Cancel</string>
    <string name="UpdateUserNameTitle">New User Name</string>
    <string name="hintUpdateUserName">Name of user as in IC</string>
    <string name="editBtn">Edit</string>
    <string name="UpdateUserMobileTitle">New Mobile Number</string>
    <string name="UpdateAccNameTitle">New Account Nickname</string>
    <string name="UpdateNoResidentTitle">New No of Residents</string>
    <string name="UpdateMonthlyIncomeTitle">New Monthly Income</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="ElectricityAccNickname">Account Nickname</string>
    <string name="ElectricityAccNum">Account Number</string>
    <string name="ElectricityAccAddress">Account Address</string>
    <string name="AboutAccount">About Account</string>
    <string name="NoOfResident">No Of Resident</string>
    <string name="MonthlyIncome">Monthly Income</string>
    <string name="PropertyType">Property Type</string>
    <string name="AccountOwner">Account Owner</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Registrationtitle">USER REGISTRATION</string>
    <string name="hintregisterEmail" translatable="false">abc@gmail.com</string>
    <string name="ErrorEmail">** Please enter a valid email address</string>
    <string name="UserPassword">Password</string>
    <string name="RegisterButton">Register</string>
    <string name="AlreadyHaveAcc">Already have an account? </string>
    <string name="SignIn"><u>Sign In</u></string>
    <string name="ErrorIC">"Please enter a valid Identity card number "</string>
    <string name="registerSuccessful">Register Successfully</string>
    <string name="registerUnSuccessful">Please fill in the required field in valid format</string>
    <string name="AddAccTitle">Activate Online Electricity Account</string>
    <string name="hintAccNum" translatable="false">**********</string>
    <string name="ErrorAccNum">** Please enter 10 digit number for this field</string>
    <string name="hintNickname">eg. house</string>
    <string name="AddAccButton">Add Account</string>
    <string name="LoginTitle">USER LOGIN</string>
    <string name="HaventHaveAcc">Did not have an account yet?</string>
    <string name="Register"><u>Register</u></string>
    <string name="userInfoTitle"><u>PERSONAL INFORMATION</u></string>
    <string name="hintIC" translatable="false">xxxxxx-xx-xxxx</string>
    <string name="hintMobile" translatable="false">xxx xxxxxxx</string>
    <string name="loginSuccessful">Login Succesfully</string>
    <string name="loginFailed">Login Failed. Please try again</string>
    <string name="AccConfirmTitle">Is This Your Account?</string>
    <string name="resetButton">Reset</string>
    <string name="ConfirmButton">Confirm</string>
    <string name="NoButton">No</string>
    <string name="Yesbutton">Yes</string>
    <string name="AccInfoTitle">ELECTRICITY ACCOUNT INFO</string>
    <string name="hintNoResident">Number of Resident</string>
    <string name="hintMonthlyIncome">Monthly Income in RM</string>
    <string name="payment_due">Payment Due:</string>
    <string name="viewBill_button">VIEW BILL</string>
    <string name="appliances_button">APPLIANCES</string>
    <string name="announcement_title">ANNOUNCEMENT</string>
    <string name="descImageSlider">Image Slider</string>
    <string name="hotline_title">HOTLINE:</string>
    <string name="hotlinePhone_faulty" translatable="false">TNB (Faulty) : 15454</string>
    <string name="hotlinePhone_billing" translatable="false">TNB (Billing) : 1-300-88-5454</string>
    <string name="hotlineEmail" translatable="false">TNB (Email) :  tnbcareline@tnb.com.my</string>
    <string name="usageAnalysis_title">USAGE ANALSIS</string>
    <string name="overallUsage_title">Overall Usage (kW):</string>
    <string name="optimumUsage_title">Optimum Usage:</string>
    <string name="billStatus_title">Bill Status:</string>
    <string name="budget_title">Budget:</string>
    <string name="address_title">Address</string>
    <string name="startingMonth">Starting Month:</string>
    <string name="endingMonth">Latest Month:</string>
    <string name="paymentSuccessful_title">" Payment Successful!"</string>
    <string name="amountPaid_title">Amount Paid:                       RM</string>
    <string name="paymentDate_title">Date of Payment: </string>
    <string name="paymentTime_title">Time of Payment: </string>
    <string name="paymentMethod_title">Payment Method: </string>
    <string name="paymentAccount_title">Account: </string>
    <string name="doneButton">DONE</string>
    <string name="setButton">SET</string>
    <string name="notificationName">Allow Notifications</string>
    <string name="changeLang">Change Language:</string>
    <string name="developerInfo">Developer Info:</string>
    <string name="companyName" translatable="false">GOL Software Company</string>
    <string name="developerEmail" translatable="false">golsoftware@gmail.com</string>
    <string name="about">About:</string>
    <string name="appVer" translatable="false">App version 2.17.31</string>
    <string name="appSettings">App Settings</string>
    <string name="english">English (United States)</string>
    <string name="malay">Bahasa Melayu (Malaysia)</string>
    <string name="chinese">Chinese (Simplified, China)</string>
    <string name="changelang">Change Language</string>
    <string name="aboutUs">ABOUT US</string>
    <string name="companyAddress">Address: Lot 10, Jalan Besar , 12345 , WPKL</string>
    <string name="companyEmail">Email: golsoftware@gmail.com</string>
    <string name="developers">DEVELOPERS</string>
    <string name="teamMem">Team Member:</string>
    <string name="manager">Manager:</string>
    <string name="keen" translatable="false">LAN KE EN</string>
    <string name="keenEmail" translatable="false">kez@gmail.com</string>
    <string name="jx" translatable="false">LEE JIA XUAN</string>
    <string name="jxEmail" translatable="false">jx@gmail.com</string>
    <string name="se" translatable="false">CHONG SHU EN</string>
    <string name="seEmail" translatable="false">se@gmail.com</string>
    <string name="cq" translatable="false">CHANG CHEE QIAN</string>
    <string name="cqEmail" translatable="false">cq@gmail.com</string>
    <string name="rateUs">RATE US</string>
    <string name="devInfo">Developer Info</string>
    <string name="enjoyGOL">Enjoying GOL?</string>
    <string name="enjoy2">Tap a star to rate this app.</string>
    <string name="submit">SUBMIT</string>
    <string name="currentBill">Current Bill</string>
    <string name="currentCharges">Current Charges</string>
    <string name="outstandingCharges">Outstanding Charges</string>
    <string name="RM" translatable="false">RM</string>
    <string name="display" translatable="false">DISPLAY</string>
    <string name="totalAmountDue">Total Amount Due</string>
    <string name="billHistory">Billing History</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="billing">Billing</string>
    <string name="billInfo">Bill Details</string>
    <string name="invoiceDate">Invoice Date:</string>
    <string name="dueDate">Due Date:</string>
    <string name="totalBill">Total Bill:</string>
    <string name="currentBillShow">Current Bill:</string>
    <string name="previousOverdue">Previous Overdue:</string>
    <string name="penalty">*1% late payment penalty charge will be imposed if payment of electricity bill is made later than 30 days</string>
    <string name="billHistoryTitle">Bill History</string>
    <string name="paymentDate">Payment Date:</string>
    <string name="paymentStatus">Payment Status:</string>
    <string name="paymentMethod">Payment Method:</string>
    <string name="energyConsumption">Energy Consumption (kWh):</string>
    <string name="amount">Amount:</string>
    <string name="appliances_main_fragment_title">Appliances Analysis</string>
    <string name="appliances_main_fragment_view">View Appliances</string>
    <string name="appliances_main_fragment_cal">Cost Calculator</string>
    <string name="appliances_manage_title">Appliances Management</string>
    <string name="appliances_manage_added">Added Appliances</string>
    <string name="appliances_manage_delete">DELETE</string>
    <string name="appliances_manage_addNew">ADD NEW</string>
    <string name="appliances_manage_details">Appliances Details</string>
    <string name="appliances_manage_name">Appliances Name</string>
    <string name="appliances_manage_name_hint">Ex: Black Oven</string>
    <string name="appliances_manage_type">Appliances Type</string>
    <string name="appliances_manage_type_hint">Choose one</string>
    <string-array name="appliances_type">
        <item>Air conditioner</item>
        <item>Clothes dryer</item>
        <item>Electric kettle</item>
        <item>Hair dryer</item>
        <item>Microwave oven</item>
        <item>Oven</item>
        <item>Refrigerator</item>
        <item>Washing machine</item>
        <item>Water heater</item>
        <item>Others</item>
    </string-array>
    <string name="appliances_manage_power">Power (W)</string>
    <string name="appliances_manage_power_hint">Ex: 1000</string>
    <string name="appliances_manage_estimate">Estimated Usage per month (hr)</string>
    <string name="appliances_manage_estimate_hint">Ex: 3</string>
    <string name="appliances_manage_cancel">CANCEL</string>
    <string name="appliances_manage_save">SAVE</string>
    <string name="appliances_manage_add_title">Add New Appliances</string>
    <string name="appliances_manage_add">ADD</string>
    <string name="appliances_manage_delete_title">Delete Appliances</string>
    <string name="appliances_manage_delete_confirm">Confirm Delete?</string>
    <string name="appliances_manage_delete_select">Number of Appliance\nSelected:</string>
    <string name="appliances_cal_title">Cost Calculator</string>
    <string name="appliances_cal_table_title">Estimated Cost</string>
    <string-array name="calculatorPeriodical">
        <item>Daily</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string name="appliances_cal_app">Appliances</string>
    <string name="appliances_cal_usage">Estimated Usage (hr)</string>
    <string name="appliances_cal_cost">Estimated Cost (RM)</string>
    <string name="appliances_cal_total">Grand Total</string>
    <string name="appliances_cal_advice">ADVICE</string>
    <string name="appliances_cal_ok" translatable="false">OK</string>
    <string name="deleteAccTitle">Confirm Delete Account?</string>
    <string name="deleteBtn">Delete</string>
</resources>