<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration.userInfoRegisterFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageViewUserInfoContainer"
        android:layout_width="330dp"
        android:layout_height="430dp"
        android:src="@drawable/rectangledeepcorner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="178dp"
        android:layout_height="72dp"
        android:layout_marginTop="-36dp"
        android:src="@drawable/rectanglenodeep"
        app:layout_constraintEnd_toEndOf="@+id/imageViewUserInfoContainer"
        app:layout_constraintStart_toStartOf="@+id/imageViewUserInfoContainer"
        app:layout_constraintTop_toTopOf="@+id/imageViewUserInfoContainer" />

    <TextView
        android:id="@+id/textViewUserInfoTitle"
        android:layout_width="155dp"
        android:layout_height="59dp"
        android:text="@string/userInfoTitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textViewUserNameInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/UserName"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/imageViewUserInfoContainer"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="14dp"
        android:layout_marginStart="10dp"
        android:text="*"
        android:textColor="@color/design_default_color_error"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textViewUserNameInfoTitle"
        app:layout_constraintTop_toTopOf="@+id/textViewUserNameInfoTitle" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="14dp"
        android:layout_marginStart="10dp"
        android:text="*"
        android:textColor="@color/design_default_color_error"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textViewICUserInfoTitle"
        app:layout_constraintTop_toTopOf="@+id/textViewICUserInfoTitle" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="14dp"
        android:layout_marginStart="10dp"
        android:text="*"
        android:textColor="@color/design_default_color_error"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textViewMobileUserInfoTitle"
        app:layout_constraintTop_toTopOf="@+id/textViewMobileUserInfoTitle" />

    <ImageView
        android:id="@+id/imageViewNameUserInfoContainer"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/rectanglenodeep"
        app:layout_constraintStart_toStartOf="@+id/textViewUserNameInfoTitle"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/editTextTextUserName"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/hintUpdateUserName"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/imageViewNameUserInfoContainer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageViewNameUserInfoContainer"
        app:layout_constraintTop_toTopOf="@+id/imageViewNameUserInfoContainer" />

    <TextView
        android:id="@+id/textViewICUserInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/UserIC"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/imageViewNameUserInfoContainer"
        app:layout_constraintTop_toBottomOf="@+id/imageViewNameUserInfoContainer" />

    <ImageView
        android:id="@+id/imageViewICUserInfoContainer"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/rectanglenodeep"
        app:layout_constraintStart_toStartOf="@+id/textViewICUserInfoTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewICUserInfoTitle" />

    <EditText
        android:id="@+id/editTextUserIC"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/hintIC"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/imageViewICUserInfoContainer"
        app:layout_constraintTop_toTopOf="@+id/imageViewICUserInfoContainer" />

    <TextView
        android:id="@+id/textViewMobileUserInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/UserMobile"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/imageViewICUserInfoContainer"
        app:layout_constraintTop_toBottomOf="@+id/textViewErrorIC" />

    <ImageView
        android:id="@+id/imageViewMobileUserInfoContainer"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/rectanglenodeep"
        app:layout_constraintStart_toStartOf="@+id/textViewMobileUserInfoTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewMobileUserInfoTitle" />

    <EditText
        android:id="@+id/editTextUserMobile"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/hintMobile"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="@+id/imageViewMobileUserInfoContainer"
        app:layout_constraintTop_toTopOf="@+id/imageViewMobileUserInfoContainer" />

    <Button
        android:id="@+id/buttonResetUserInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/yellowButton"
        android:textColor="@color/black"
        android:text="@string/resetButton"
        app:layout_constraintStart_toStartOf="@+id/imageViewMobileUserInfoContainer"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMobileUserInfoContainer" />

    <Button
        android:id="@+id/buttonConfirmUserInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/yellowButton"
        android:textColor="@color/black"
        android:text="@string/ConfirmButton"
        app:layout_constraintEnd_toEndOf="@+id/imageViewMobileUserInfoContainer"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMobileUserInfoContainer" />

    <TextView
        android:id="@+id/textViewErrorIC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/ErrorIC"
        android:textColor="@color/design_default_color_error"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/imageViewICUserInfoContainer"
        app:layout_constraintTop_toBottomOf="@+id/imageViewICUserInfoContainer" />


</androidx.constraintlayout.widget.ConstraintLayout>
