<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="352dp"
    android:layout_height="37dp">

    <LinearLayout
        android:id="@+id/table_app"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textTableApp1"
            android:layout_width="176dp"
            android:layout_height="match_parent"
            android:background="@drawable/tableborder"
            android:gravity="center"
            android:text="@string/appliances_cal_app"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textTableAppUsage1"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@drawable/tableborder"
            android:gravity="center"
            android:text="@string/appliances_cal_usage"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textTableAppCost1"
            android:layout_width="86dp"
            android:layout_height="match_parent"
            android:background="@drawable/tableborder"
            android:gravity="center"
            android:text="@string/appliances_cal_cost"
            android:textAlignment="center"
            android:textColor="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>