<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Billing.PaymentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="352dp"
        android:layout_height="486dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/rectangledeep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="326dp"
            android:layout_height="460dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/paymentSuccessful_title"
                android:textSize="24sp"
                tools:text="@string/paymentSuccessful_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="157dp">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="162dp"
                    android:layout_height="135dp"
                    android:gravity="center_vertical|center_horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/tick" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/amountPaid_title"
                    tools:text="@string/amountPaid_title" />

                <TextView
                    android:id="@+id/displayAmountPaid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/paymentDate_title"
                    tools:text="@string/paymentDate_title" />

                <TextView
                    android:id="@+id/displayPaymentDate2"
                    android:layout_width="186dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="176dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/paymentTime_title"
                    tools:text="@string/paymentTime_title" />

                <TextView
                    android:id="@+id/displayTimePayment"
                    android:layout_width="176dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView34"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/paymentMethod"
                    tools:text="@string/paymentMethod_title" />

                <TextView
                    android:id="@+id/displayPM"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView35"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/paymentStatus"
                    tools:text="@string/paymentStatus" />

                <TextView
                    android:id="@+id/displayStatus"
                    android:layout_width="169dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="57dp" />

            <Button
                android:id="@+id/buttonDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FEDD59"
                android:text="@string/doneButton"
                android:textColor="#130F0F"
                tools:text="@string/doneButton" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="206dp" />
</androidx.constraintlayout.widget.ConstraintLayout>