<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.DeleteAccFragment">


    <ImageView
        android:id="@+id/imageViewEditTextContainer"
        android:layout_width="275dp"
        android:layout_height="181dp"
        android:src="@drawable/rectangledeepcorner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCancelDeleteAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_corner_yellow"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewEditTextContainer"
        app:layout_constraintStart_toStartOf="@+id/textViewDeleteAccTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewDeleteAccTitle" />

    <Button
        android:id="@+id/buttonDeleteAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_corner_yellow"
        android:text="@string/deleteBtn"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewEditTextContainer"
        app:layout_constraintEnd_toEndOf="@+id/textViewDeleteAccTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewDeleteAccTitle" />

    <TextView
        android:id="@+id/textViewDeleteAccTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/deleteAccTitle"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewEditTextContainer"
        app:layout_constraintStart_toStartOf="@+id/imageViewEditTextContainer"
        app:layout_constraintTop_toTopOf="@+id/imageViewEditTextContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>

